--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
 <body class="flex m-0 p-0 flex h-full w-full">
   <div class="container flex flex-col h-full w-full mx-auto justify-center items-center">
     <div
-      class="fixed bottom-5 right-4 z-50 bg-gray-500 bg-clip-padding backdrop-filter backdrop-blur bg-opacity-50 backdrop-saturate-100 backdrop-contrast-100 rounded-lg p-1 hover:scale-105 cursor-pointer transition ease-in-out duration-300">
-      <a href="https://birobirobiro.dev" target="_blank">
-        <img src="./assets/image/logo.svg" alt="" class="w-12 h-12">
+      class="fixed bottom-5 right-4 z-50 bg-white bg-clip-padding backdrop-filter backdrop-blur backdrop-saturate-100 backdrop-contrast-100 rounded-lg p-1 hover:scale-105 cursor-pointer transition ease-in-out duration-300">
+      <a href="https://ribeiroevandro.com.br" target="_blank">
+        <img src="./assets/image/ribeiroevandro.webp" alt="" class="w-12 h-12">
       </a>
     </div>
     <div id="player" class="fixed top-0 left-0 w-full h-full pointer-events-none scale-125"></div>
@@ -102,7 +102,7 @@
 
           <div class="flex gap-4 align-center">
             <input class="w-full rounded-md pl-2" type="text" id="videoURL"
-              placeholder="https://www.youtube.com/watch?v=ir96UnkKIgA" onkeypress="loadVideo()" />
+              placeholder="https://www.youtube.com/watch?v=Xf3-4A-uEc8" onkeypress="loadVideo()" />
 
             <button class="btn bg-[#3B3B3B] hover:bg-[#4B4B4B] border-none" type="button" onclick="loadVideo()">
               <i class="ph ph-play"></i>
