--- a/index.html
+++ b/index.html
@@ -17,19 +17,19 @@
   <meta name="description" content="Listen to Youtube music while coding, studying by combining ambient sounds">
 
   <!-- Facebook Meta Tags -->
-  <meta property="og:url" content="https://ytbgsound.vercel.app/">
+  <meta property="og:url" content="https://lo-fy.ribeiroevandro.com.br/">
   <meta property="og:type" content="website">
   <meta property="og:title" content="Youtube Background Sound">
   <meta property="og:description" content="Listen to Youtube music while coding, studying by combining ambient sounds">
-  <meta property="og:image" content="https://i.ibb.co/wwKH0xw/Youtube-Background-Sound.png">
+  <meta property="og:image" content="https://lo-fy.ribeiroevandro.com.br/assets/image/og-image.png">
 
   <!-- Twitter Meta Tags -->
   <meta name="twitter:card" content="summary_large_image">
   <meta property="twitter:domain" content="ytbgsound.vercel.app">
-  <meta property="twitter:url" content="https://ytbgsound.vercel.app/">
+  <meta property="twitter:url" content="https://lo-fy.ribeiroevandro.com.br/">
   <meta name="twitter:title" content="Youtube Background Sound">
   <meta name="twitter:description" content="Listen to Youtube music while coding, studying by combining ambient sounds">
-  <meta name="twitter:image" content="https://i.ibb.co/wwKH0xw/Youtube-Background-Sound.png">
+  <meta name="twitter:image" content="https://lo-fy.ribeiroevandro.com.br/assets/image/og-image.png">
 </head>
 
 <body class="flex m-0 p-0 flex h-full w-full">
